scrollbar fix

--- a/beast-verse/src/App.css
+++ b/beast-verse/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+body::-webkit-scrollbar {
+  display: none;
+  width: 8px;
+  background-color: #F5F5F5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body::-webkit-scrollbar-thumb {
+  display: none;
+  border-radius: 10px;
+  background-color: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hidescrollbar::-webkit-scrollbar {
+  display: none;
+  width: 8px;
+  background-color: #F5F5F5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hidescrollbar::-webkit-scrollbar-thumb {
+  display: none;
+  border-radius: 10px;
+  background-color: #000000;
 }
